--- a/src/app/features/users/user-dashboard.component.html
+++ b/src/app/features/users/user-dashboard.component.html
@@ -1,7 +1,7 @@
 <!-- <fix-header></fix-header> -->
 <div class="page-start-point">
   <div class="p-l-20 p-r-20 p-b-20 min-height parent wrapper-btn-center">
-        <button  mat-raised-button  (click)="openDialog()" class="main-background-color main-button color-white btn-width-add-users center-screen-btn">
+        <button  mat-raised-button  (click)="addProject()" class="main-background-color main-button color-white btn-width-add-users center-screen-btn">
           Add First User
         </button>
   </div> 
