--- a/src/app/features/indent/indent-detail/indent-detail.component.html
+++ b/src/app/features/indent/indent-detail/indent-detail.component.html
@@ -14,62 +14,61 @@
       </div>
     </div>
     <!-- first table structure -->
-    <a (click)="viewIndentDetails()">
-      <div class="row">
-        <!-- <div class="col-sm-12"> -->
-        <!-- table structure -->
-        <table mat-table [dataSource]="dataSource1" class="mat-elevation-z8 col-sm-12">
-          <!--- Note that these columns can be defined in any order.
+
+    <div class="row">
+      <!-- <div class="col-sm-12"> -->
+      <!-- table structure -->
+      <table mat-table [dataSource]="dataSource1" class="mat-elevation-z8 col-sm-12">
+        <!--- Note that these columns can be defined in any order.
                 The actual rendered columns are set as a property on the row definition" -->
 
-          <!-- Position Column -->
-          <ng-container matColumnDef="Indent Name">
-            <th mat-header-cell *matHeaderCellDef>Indent Name</th>
-            <td mat-cell *matCellDef="let element">{{ element.indentId }}</td>
-          </ng-container>
+        <!-- Position Column -->
+        <ng-container matColumnDef="Indent Name">
+          <th mat-header-cell *matHeaderCellDef>Indent Name</th>
+          <td mat-cell *matCellDef="let element">{{ element.indentId }}</td>
+        </ng-container>
 
-          <!-- Name Column -->
-          <ng-container matColumnDef="Requested Date">
-            <th mat-header-cell *matHeaderCellDef>Requested Date"</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.createdAt | date }}
-            </td>
-          </ng-container>
+        <!-- Name Column -->
+        <ng-container matColumnDef="Requested Date">
+          <th mat-header-cell *matHeaderCellDef>Requested Date"</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.createdAt | date }}
+          </td>
+        </ng-container>
 
-          <!-- Weight Column -->
-          <ng-container matColumnDef="Total No Of Material">
-            <th mat-header-cell *matHeaderCellDef>Total No Of Material</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.materialCount }}
-            </td>
-          </ng-container>
+        <!-- Weight Column -->
+        <ng-container matColumnDef="Total No Of Material">
+          <th mat-header-cell *matHeaderCellDef>Total No Of Material</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.materialCount }}
+          </td>
+        </ng-container>
 
-          <!-- Symbol Column -->
-          <ng-container matColumnDef="Created By">
-            <th mat-header-cell *matHeaderCellDef>Created By</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.createdBy }}
-            </td>
-          </ng-container>
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="Created By">
+          <th mat-header-cell *matHeaderCellDef>Created By</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.createdBy }}
+          </td>
+        </ng-container>
 
-          <ng-container matColumnDef="Date">
-            <th mat-header-cell *matHeaderCellDef>Date</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.createdAt | date }}
-            </td>
-          </ng-container>
+        <ng-container matColumnDef="Date">
+          <th mat-header-cell *matHeaderCellDef>Date</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.createdAt | date }}
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr (click)="viewIndentDetails(row)" mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+      </table>
+
+      <!-- end structure -->
+      <!-- </div> -->
+    </div>
 
 
-
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-        </table>
-
-        <!-- end structure -->
-        <!-- </div> -->
-      </div>
-
-    </a>
     <div class="row p-t-10 p-b-10">
       <div class="col-sm-12">
         <mat-toolbar>
@@ -123,7 +122,7 @@
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        <tr (click)="viewIndentDetails(row)" mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
 
       <!-- end structure -->
