--- a/src/app/features/indent/single-indent-details/single-indent-details.component.html
+++ b/src/app/features/indent/single-indent-details/single-indent-details.component.html
@@ -16,10 +16,10 @@
         </div>
 
         <!-- table structure -->
-        <div class="row">
+        <div class="row" *ngIf="singleIndentDetails">
             <!-- <div class="col-sm-12"> -->
             <!-- table structure -->
-            <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 col-sm-12">
+            <table mat-table [dataSource]="singleIndentDetails" class="mat-elevation-z8 col-sm-12">
                 <!--- Note that these columns can be defined in any order.
                   The actual rendered columns are set as a property on the row definition" -->
 
@@ -31,7 +31,7 @@
 
                 <!-- Quantity Column -->
                 <ng-container matColumnDef="Requested Quantity">
-                    <th mat-header-cell *matHeaderCellDef>Requested Quantity"</th>
+                    <th mat-header-cell *matHeaderCellDef>Requested Quantity</th>
                     <td mat-cell *matCellDef="let element">
                         {{ element.requestedQuantity }}
                     </td>
@@ -41,7 +41,7 @@
                 <ng-container matColumnDef="Issued Quantity">
                     <th mat-header-cell *matHeaderCellDef>Issued Quantity</th>
                     <td mat-cell *matCellDef="let element">
-                        {{ element.issuedQuantity }}
+                        {{ element.issuedQty }}
                     </td>
                 </ng-container>
 
@@ -49,13 +49,13 @@
                 <ng-container matColumnDef="Requested Date">
                     <th mat-header-cell *matHeaderCellDef>Requested Date</th>
                     <td mat-cell *matCellDef="let element">
-                        {{ element.createdAt }}
+                        {{ element.dueDate }}
                     </td>
                 </ng-container>
 
-
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns">
+                </tr>
             </table>
 
             <!-- end structure -->
