--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -66,6 +66,20 @@
                 </td>
               </ng-container>
 
+              <ng-container matColumnDef="ViewGRN">
+                <th mat-header-cell *matHeaderCellDef></th>
+                <td mat-cell *matCellDef="let element">
+                  <a [routerLink]="['../../po/view-grn/']">View GRN</a>
+                </td>
+              </ng-container>
+
+              <ng-container matColumnDef="AddGRN">
+                <th mat-header-cell *matHeaderCellDef></th>
+                <td mat-cell *matCellDef="let element">
+                  <a [routerLink]="['../../po/add-grn/']">Add GRN</a>
+                </td>
+              </ng-container>
+
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
             </table>
@@ -88,7 +102,7 @@
               </ng-container>
 
               <ng-container matColumnDef="Raised Date">
-                <th mat-header-cell *matHeaderCellDef>Raised Date"</th>
+                <th mat-header-cell *matHeaderCellDef>Raised Date</th>
                 <td mat-cell *matCellDef="let element">
                   {{ element.created_at }}
                 </td>
