add & view GRN: working dir saved

--- a/src/app/features/indent/indent-detail/indent-detail.component.html
+++ b/src/app/features/indent/indent-detail/indent-detail.component.html
@@ -30,7 +30,7 @@
 
         <!-- Name Column -->
         <ng-container matColumnDef="Requested Date">
-          <th mat-header-cell *matHeaderCellDef>Requested Date"</th>
+          <th mat-header-cell *matHeaderCellDef>Requested Date</th>
           <td mat-cell *matCellDef="let element">
             {{ element.createdAt | date }}
           </td>
