--- a/src/app/features/po/view-grn/view-grn.component.html
+++ b/src/app/features/po/view-grn/view-grn.component.html
@@ -38,9 +38,9 @@
                             </div>
                         </mat-panel-title>
                     </mat-expansion-panel-header>
-                    <div class="row">
-                        <!-- *ngIf="grnDetails" -->
-                        <table mat-table [dataSource]="" class="mat-elevation-z8 col-sm-12">
+                    <div class="row" *ngIf="grnDetails">
+
+                        <table mat-table [dataSource]="grnDetails" class="mat-elevation-z8 col-sm-12">
                             <ng-container matColumnDef="Material Name">
                                 <th mat-header-cell *matHeaderCellDef>Material Name</th>
                                 <td mat-cell *matCellDef="let element">{{ element.materialName }}</td>
@@ -49,21 +49,21 @@
                             <ng-container matColumnDef="Awarded Quantity">
                                 <th mat-header-cell *matHeaderCellDef>Awarded Quantity</th>
                                 <td mat-cell *matCellDef="let element">
-                                    {{ element.awardedQuantity }}
+                                    <!-- {{ element.awardedQuantity }} -->
                                 </td>
                             </ng-container>
 
                             <ng-container matColumnDef="Certified Quantity">
                                 <th mat-header-cell *matHeaderCellDef>Certified Quantity</th>
                                 <td mat-cell *matCellDef="let element">
-                                    {{ element.certifiedQuantity }}
+                                    {{ element.deliveredQty }}
                                 </td>
                             </ng-container>
 
                             <ng-container matColumnDef="Date">
                                 <th mat-header-cell *matHeaderCellDef>Date</th>
                                 <td mat-cell *matCellDef="let element">
-                                    {{ element.dueDate }}
+                                    <!-- {{ element.deliveredDate | date }} -->
                                 </td>
                             </ng-container>
 
