--- a/src/app/features/po/add-grn/add-grn.component.html
+++ b/src/app/features/po/add-grn/add-grn.component.html
@@ -20,11 +20,11 @@
                 </div>
                 <div class="pull-right p-l-10 p-r-10">
 
-                    <mat-form-field class="border-input">
+                    <!-- <mat-form-field class="border-input">
                         <input matInput [matDatepicker]="dueDate" placeholder="02-02-2020" formControlName="dueDate" />
                         <mat-datepicker-toggle matSuffix [for]="dueDate"></mat-datepicker-toggle>
                         <mat-datepicker #dueDate startView="month" [startAt]="dueDate"></mat-datepicker>
-                    </mat-form-field>
+                    </mat-form-field> -->
 
                 </div>
             </div>
