--- a/src/app/shared/dialogs/disable-user/disable-user-component.html
+++ b/src/app/shared/dialogs/disable-user/disable-user-component.html
@@ -8,16 +8,16 @@
   <div mat-dialog-actions>
     <div class="col-sm-12 save-btn-add-edit-user-modal">
         <button
-        mat-raised-button
+        mat-raised-button (click)="cancel()"
         class="main-background-color main-button color-white pull-left"
       >
         Cancel
       </button>
       <button
-        mat-raised-button
+        mat-raised-button (click)="deactivateUser()"
         class="main-background-color main-button color-white pull-right"
       >
-        Save
+        Deactivate
       </button>
     </div>
   </div>
