--- a/src/app/features/rfq/review/review.component.html
+++ b/src/app/features/rfq/review/review.component.html
@@ -1,53 +1,32 @@
 <!-- <fix-header></fix-header> -->
 <form *ngIf="form" [formGroup]="form" (ngSubmit)="submit()">
-<div class="page-start-point">
-  <div class="p-l-20 p-r-20 p-b-20 min-height parent">
-    <div class="row m-b-10 ">
-      <div class="col-md-12">
-        <div class="row ">
-          <div class="col-xs-12 p-t-10">
-            <button
-              mat-raised-button
-              class="main-background-color main-button color-white pull-right m-r-30"
-              [disabled]="!form.valid"
-            >
-              Float RFQ
-            </button>
+  <div class="page-start-point">
+    <div class="p-l-20 p-r-20 p-b-20 min-height parent">
+      <div class="row m-b-10 ">
+        <div class="col-md-12">
+          <div class="row ">
+            <div class="col-xs-12 p-t-10">
+              <button mat-raised-button class="main-background-color main-button color-white pull-right m-r-30"
+                [disabled]="!form.valid">
+                Float RFQ
+              </button>
+            </div>
           </div>
-        </div>
-        <!-- first row -->
-        <div class="row m-b-10">
-          <div class="col-md-3">
-            <mat-form-field class="border-input">
-              <input
-                class="p-b-10"
-                matInput
-                type="text"
-                formControlName="rfqName" 
-                placeholder="RFQ Name"
-              />
-            </mat-form-field>
-          </div>
-          <div class="col-md-4">
-            RFQ End Date & Time
-            <mat-form-field class="border-input">
-              <input
-                matInput
-                [matDatepicker]="dueDate"
-                placeholder="Project Start Date"
-                formControlName="dueDate"
-              />
-              <mat-datepicker-toggle
-                matSuffix
-                [for]="dueDate"
-              ></mat-datepicker-toggle>
-              <mat-datepicker
-                #dueDate
-                startView="month"
-                [startAt]="dueDate"
-              ></mat-datepicker>
-            </mat-form-field>
-            <!-- <mat-form-field class="border-input">
+          <!-- first row -->
+          <div class="row m-b-10">
+            <div class="col-md-3">
+              <mat-form-field class="border-input">
+                <input class="p-b-10" matInput type="text" formControlName="rfqName" placeholder="RFQ Name" />
+              </mat-form-field>
+            </div>
+            <div class="col-md-4">
+              RFQ End Date & Time
+              <mat-form-field class="border-input">
+                <input matInput [matDatepicker]="dueDate" placeholder="Project Start Date" formControlName="dueDate" />
+                <mat-datepicker-toggle matSuffix [for]="dueDate"></mat-datepicker-toggle>
+                <mat-datepicker #dueDate startView="month" [startAt]="dueDate"></mat-datepicker>
+              </mat-form-field>
+              <!-- <mat-form-field class="border-input">
               <input
                 matInput
                 class="p-b-10"
@@ -57,90 +36,86 @@
               />
             </mat-form-field>
             <mat-icon>calendar_today</mat-icon> -->
+            </div>
+            <div class="col-md-2 p-t-20 main-color">
+              <button mat-button class="pull-right" (click)="openDialog1()">
+                Comment
+              </button>
+            </div>
+            <div class="col-md-3 p-t-20 main-color">
+              <button mat-button class="pull-right" (click)="openDialog2()">
+                View Terms & Conditions/Documents
+              </button>
+            </div>
           </div>
-          <div class="col-md-2 p-t-20 main-color">
-            <button mat-button class="pull-right" (click)="openDialog1()">
-              Comment
-            </button>
-          </div>
-          <div class="col-md-3 p-t-20 main-color">
-            <button mat-button class="pull-right" (click)="openDialog2()">
-              View Terms & Conditions/Documents
-            </button>
-          </div>
-        </div>
 
-        <!-- second row -->
-        <div class="row m-b-10">
-          <div class="col-md-3" *ngFor="let supplier of selectedSuppliersList">
-            <mat-card>
-              <div class="col-md-12 text-bold">
-              <label for="company ">{{supplier.supplier_name}}</label>
-              </div>
-              <div class="col-md-12">
-              <label for="email">{{supplier.email}}</label>
-              </div>
-              <div class="col-md-12">
-              <label for="phoneNumber">{{supplier.contact_no}}</label>
-              </div>
-            </mat-card>
+          <!-- second row -->
+          <div class="row m-b-10">
+            <div class="col-md-3" *ngFor="let supplier of selectedSuppliersList">
+              <mat-card>
+                <div class="col-md-12 text-bold">
+                  <label for="company ">{{supplier.supplier_name}}</label>
+                </div>
+                <div class="col-md-12">
+                  <label for="email">{{supplier.email}}</label>
+                </div>
+                <div class="col-md-12">
+                  <label for="phoneNumber">{{supplier.contact_no}}</label>
+                </div>
+              </mat-card>
+            </div>
           </div>
         </div>
       </div>
+
+      <!-- Accordion/ Collapsible -->
+      <mat-accordion>
+        <!-- first Project -->
+        <ng-template ngFor let-project [ngForOf]="checkedMaterialsList" let-i="index">
+          <mat-expansion-panel class="myPanel">
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                {{project.projectName}}
+              </mat-panel-title>
+              <mat-panel-description>
+                {{project.defaultAddress.addressLine1}}
+              </mat-panel-description>
+            </mat-expansion-panel-header>
+
+            <!-- table -->
+            <table mat-table [dataSource]="project.projectMaterialList" class="mat-elevation-z8 col-sm-12">
+              <!-- Material Name Column -->
+              <ng-container matColumnDef="Material Name">
+                <th mat-header-cell *matHeaderCellDef>Material Name</th>
+                <td mat-cell *matCellDef="let element" class="dark-gray-color">
+                  {{ element.materialName }}
+                </td>
+              </ng-container>
+
+              <!-- Quantity Column -->
+              <ng-container matColumnDef="Quantity">
+                <th mat-header-cell *matHeaderCellDef>Quantity</th>
+                <td mat-cell *matCellDef="let element">
+                  {{ element.quantity }}
+                </td>
+              </ng-container>
+
+              <!-- Makes Column -->
+              <ng-container matColumnDef="Makes">
+                <th mat-header-cell *matHeaderCellDef>Makes</th>
+                <td mat-cell *matCellDef="let element">
+                  <span class="brand-view-style m-r-5" *ngFor="let make of element.makes">
+                    {{make}}
+                  </span>
+                </td>
+              </ng-container>
+
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+            </table>
+          </mat-expansion-panel>
+        </ng-template>
+      </mat-accordion>
     </div>
-
-    <!-- Accordion/ Collapsible -->
-    <mat-accordion>
-      <!-- first Project -->
-      <ng-template ngFor let-project [ngForOf]="checkedMaterialsList" let-i="index">
-      <mat-expansion-panel class="myPanel">
-        <mat-expansion-panel-header>
-          <mat-panel-title>
-            {{project.projectName}}
-          </mat-panel-title>
-          <mat-panel-description>
-            {{project.defaultAddress.addressLine1}}
-          </mat-panel-description>
-        </mat-expansion-panel-header>
-
-        <!-- table -->
-        <table
-          mat-table
-          [dataSource]="project.projectMaterialList"
-          class="mat-elevation-z8 col-sm-12"
-        >
-          <!-- Material Name Column -->
-          <ng-container matColumnDef="Material Name">
-            <th mat-header-cell *matHeaderCellDef>Material Name</th>
-            <td mat-cell *matCellDef="let element" class="dark-gray-color">
-              {{ element.materialName }}
-            </td>
-          </ng-container>
-
-          <!-- Quantity Column -->
-          <ng-container matColumnDef="Quantity">
-            <th mat-header-cell *matHeaderCellDef>Quantity</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.quantity }}
-            </td>
-          </ng-container>
-
-          <!-- Makes Column -->
-          <ng-container matColumnDef="Makes">
-            <th mat-header-cell *matHeaderCellDef>Makes</th>
-            <td mat-cell *matCellDef="let element">
-              <span class="brand-view-style m-r-5" *ngFor="let make of element.makes">
-                {{make}}
-              </span>
-            </td>
-          </ng-container>
-
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-        </table>
-      </mat-expansion-panel>
-      </ng-template>
-    </mat-accordion>
   </div>
-</div>
 </form>
