--- a/src/app/shared/dialogs/view-documents/view-documents-dialog.html
+++ b/src/app/shared/dialogs/view-documents/view-documents-dialog.html
@@ -1,6 +1,11 @@
-<h1 mat-dialog-title>Add Supplier</h1>
+<h1 mat-dialog-title>View Terms & Conditions/Documents
+  <div class="pull-right" (click)="onNoClick()">
+    <mat-icon>close</mat-icon>
 
-<div mat-dialog-content>
+  </div>
+</h1>
+
+<div mat-dialog-content *ngIf="data">
   <div class="row ">
     <!-- Documents -->
     <div class="col-md-6">
@@ -8,67 +13,12 @@
         <label>Documents</label>
       </div>
       <div>
-        <div class="col-md-8 scroll-box h-200 pull-right">
-          <div class="row grey-full-border p-t-5 m-b-10">
+        <div class="col-md-8 scroll-box h-290 pull-right">
+          <div *ngFor="let doc of data.documentsList;" class="row grey-full-border p-t-5 m-b-10">
             <div class="col-xs-2">
               <mat-icon>descriptions</mat-icon>
             </div>
-            <div class="col-xs-5 font-size14">Document Name</div>
-            <div class="col-xs-3 font-size14">300 kb</div>
-            <div class="col-xs-2">
-              <mat-icon>cloud_download</mat-icon>
-            </div>
-          </div>
-
-          <div class="row grey-full-border p-t-5 m-b-10">
-            <div class="col-xs-2">
-              <mat-icon>descriptions</mat-icon>
-            </div>
-            <div class="col-xs-5 font-size14">Document Name</div>
-            <div class="col-xs-3 font-size14">300 kb</div>
-            <div class="col-xs-2">
-              <mat-icon>cloud_download</mat-icon>
-            </div>
-          </div>
-
-          <div class="row grey-full-border p-t-5 m-b-10">
-            <div class="col-xs-2">
-              <mat-icon>descriptions</mat-icon>
-            </div>
-            <div class="col-xs-5 font-size14">Document Name</div>
-            <div class="col-xs-3 font-size14">300 kb</div>
-            <div class="col-xs-2">
-              <mat-icon>cloud_download</mat-icon>
-            </div>
-          </div>
-
-          <div class="row grey-full-border p-t-5 m-b-10">
-            <div class="col-xs-2">
-              <mat-icon>descriptions</mat-icon>
-            </div>
-            <div class="col-xs-5 font-size14">Document Name</div>
-            <div class="col-xs-3 font-size14">300 kb</div>
-            <div class="col-xs-2">
-              <mat-icon>cloud_download</mat-icon>
-            </div>
-          </div>
-
-          <div class="row grey-full-border p-t-5 m-b-10">
-            <div class="col-xs-2">
-              <mat-icon>descriptions</mat-icon>
-            </div>
-            <div class="col-xs-5 font-size14">Document Name</div>
-            <div class="col-xs-3 font-size14">300 kb</div>
-            <div class="col-xs-2">
-              <mat-icon>cloud_download</mat-icon>
-            </div>
-          </div>
-
-          <div class="row grey-full-border p-t-5 m-b-10">
-            <div class="col-xs-2">
-              <mat-icon>descriptions</mat-icon>
-            </div>
-            <div class="col-xs-5 font-size14">Document Name</div>
+            <div class="col-xs-5 font-size14">{{doc.DocumentDesc}}</div>
             <div class="col-xs-3 font-size14">300 kb</div>
             <div class="col-xs-2">
               <mat-icon>cloud_download</mat-icon>
@@ -84,19 +34,9 @@
         <label>Add Terms & Conditions</label>
       </div>
       <div class="col-xs-12 grey-full-border">
-        <textarea matInput type="text" class="p-t-20 m-l-20 h-290 scroll-box">
-Terms of Payment:
-        
-A.20% as an Advance against Proforma Invoice showing tax break up.
-
-B.50% after Delivery of Materials with 15 Days Credit.
-
-C.30% after work completion with 30 Days Credit.
-
-D.The advance payment will be of the order value excluding GST.
-      
-              </textarea
-        >
+        <div class="p-t-20 m-l-20 h-290 scroll-box">
+          {{data.termsDesc}}
+        </div>
       </div>
     </div>
   </div>
