UI- FIXES Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/rfq/project-materials/project-materials.component.html
+++ b/src/app/features/rfq/project-materials/project-materials.component.html
@@ -116,7 +116,7 @@
     <!-- table structure -->
     <mat-accordion class="accordion-padding-zero">
      <ng-template ngFor let-material [ngForOf]="rfqDetails" let-i="index">
-      <mat-expansion-panel>
+      <mat-expansion-panel class="myPanel">
         <mat-expansion-panel-header>
           <mat-panel-title>
             {{material.projectName}}
@@ -139,7 +139,10 @@
           <mat-checkbox
             (change)="element.checked = !element.checked"
             [checked]="element.checked"
-            >{{ element.materialName }}
+            >{{ element.materialName }} <br>
+            <span class="category-name">
+              {{ element.materialGroup}}
+            </span>
           </mat-checkbox>
         </td>
         </ng-container>
