--- a/src/assets/scss/pages/supplier.scss
+++ b/src/assets/scss/pages/supplier.scss
@@ -7,6 +7,7 @@
 }
 .delete-icon{
     color: #d0d0d0;
+    cursor: pointer;
 }
 .supplier-dialog{
     mat-form-field{
@@ -29,4 +30,42 @@
    table{
        border-left: 1px solid #d6d6d6;
    }  
+}
+
+.mat-checkbox.mat-accent {
+  .mat-checkbox-frame {
+    border: 1px solid dodger-blue;
+  }
+
+  &.mat-checkbox-checked .mat-checkbox-background {
+    background-color: #7dd32d;
+    border: 1px solid dodger-blue;
+  }
+
+  .mat-checkbox-checkmark-path {
+    stroke: dodger-blue !important;
+  }
+}
+
+.action1{
+    a{
+    float: right;
+    font-size: 15px;
+    font-weight: 400;
+    color: #f47721;
+    }
+}
+.action2{
+    a{
+    float: right;
+    font-size: 15px;
+    font-weight: 400;
+    color: #f47721;
+    }
+}
+.rfq-create-btn{
+    padding: 5px 0px;
+}
+.category-name{
+    font-size: 8px;
 }
