--- a/src/app/features/rfq/rfq-view/rfq-view.component.html
+++ b/src/app/features/rfq/rfq-view/rfq-view.component.html
@@ -71,7 +71,7 @@
                         <ng-container matColumnDef="Quantity">
                             <th class="font-size14" mat-header-cell *matHeaderCellDef>Quantity</th>
                             <td mat-cell *matCellDef="let element">
-                                {{ element.quantity }}
+                                {{ element.rfqMaterialQty }}
                             </td>
                         </ng-container>
 
