project hardcoding removed from add supplier

--- a/src/app/features/rfq/suppliers/suppliers.component.html
+++ b/src/app/features/rfq/suppliers/suppliers.component.html
@@ -66,7 +66,7 @@
 
       <div class="text-right col-xs-2">
         <button
-        class="main-background-color round-button full-border m-t-5 m-r-15" (click)="openDialog()"
+        class="main-background-color round-button full-border m-t-5 m-r-15" (click)="openDialog(checkedMaterialsList[0].projectId)"
       >
         <mat-icon class="color-white m-t-5">add</mat-icon>
       </button>
