--- a/src/app/features/global-store/global-store.component.html
+++ b/src/app/features/global-store/global-store.component.html
@@ -1,21 +1,13 @@
 <div class="page-start-point ">
   <div class="p-l-20 p-r-20 p-b-20 min-height">
     <a href="javascript:void(0)" (click)="setButtonName('materialWise')">
-      <button
-        [class.active]="buttonName == 'materialWise'"
-        class="color-black"
-        mat-button
-      >
+      <button [class.active]="buttonName == 'materialWise'" class="color-black" mat-button>
         Material Wise
       </button>
     </a>
 
     <a href="javascript:void(0)" (click)="setButtonName('projectWise')">
-      <button
-        [class.active]="buttonName == 'projectWise'"
-        class="color-black"
-        mat-button
-      >
+      <button [class.active]="buttonName == 'projectWise'" class="color-black" mat-button>
         Project Wise
       </button>
     </a>
@@ -46,14 +38,10 @@
     </mat-card>
 
     <div *ngIf="buttonName === 'materialWise'; else elseBlock">
-      <app-material-wise
-        [materialData]="globalStoreData[0].data"
-      ></app-material-wise>
+      <app-material-wise [materialData]="globalStoreData[0].data"></app-material-wise>
     </div>
-    <ng-template #elseBlock
-      ><app-project-wise
-        [projectData]="globalStoreData[1].data"
-      ></app-project-wise
-    ></ng-template>
+    <ng-template #elseBlock>
+      <app-project-wise [projectData]="globalStoreData[1].data"></app-project-wise>
+    </ng-template>
   </div>
 </div>
