--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -13,3 +13,4 @@
     @import "./pages/dashboard.scss";
     @import "./pages/bom-preview.scss";
     @import "./pages/global-store.component.scss";
+    @import "./pages/initiate-po.component.scss"
