--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -2,7 +2,7 @@
   <div class="p-l-20 p-r-20 p-b-20 min-height parent">
     <div class="col-xs-12 text-right">
       <button mat-raised-button class="main-background-color main-button color-white m-b-5"
-        [routerLink]="['../../po/po-supplier']">
+        [routerLink]="['../../po/initiate-po']">
         Inititate Po
       </button>
       <!-- Topmost Status -->
