--- a/src/assets/scss/pages/supplier.scss
+++ b/src/assets/scss/pages/supplier.scss
@@ -69,3 +69,56 @@
 .category-name{
     font-size: 12px;
 }
+.rfq-detail-body{
+    min-height:300px;
+    background: white;
+}
+
+.material-rfq-supplies{
+    background:#C7C7C7;
+    div{
+        color :#343434;
+    }
+}
+.brand-name-rfq-supplies{
+    background:#E6E6E6;
+    div{
+        color :#121212 !important;
+    }
+}
+.table-white-background-color{
+    background: #ffffff;
+   div{
+       color : #707070;
+   } 
+}
+
+.submit-bid-div{
+    background:#ffffff ;
+    margin: auto;
+    width: 500px;
+    height: 225px;
+     text-align: center;
+        display: block;
+        border-radius: 8px;
+    .image-orange-tick{
+        padding-top: 40px;
+        padding-bottom: 10px ;
+    }
+}
+.submit-bid-row{
+   padding: 50px;
+}
+
+.bid-material{
+    color:#6A6A6A;
+    font-size: 14px;
+}
+.thank-you{
+    color:#6A6A6A;
+    font-size: 24px;
+}
+.quotes-submitted{
+    color:#6A6A6A;
+    font-size: 12px;
+}
