--- a/src/app/features/bom/bom.component.html
+++ b/src/app/features/bom/bom.component.html
@@ -1,72 +1,58 @@
 <div class="page-start-point ">
   <div class="p-l-20 p-r-20 p-b-20 min-height">
-    <card-layout
-      *ngIf="product"
-      (onEdit)="editProject($event)"
-      (onDelete)="deleteProject($event)"
-      [projectDetails]="product"
-    ></card-layout>
+    <card-layout *ngIf="product" (onEdit)="editProject($event)" (onDelete)="deleteProject($event)"
+      [projectDetails]="product"></card-layout>
     <div class="p-t-10" *ngIf="!showTable">
       <mat-card class="parent">
         <div class="row">
-          <div class="col-sm-12 text-left">
+          <div class="col-xs-6 text-left">
             <p>Please select categories to add materials in BOM</p>
+          </div>
+          <div class="col-xs-6 text-right d-flex justify-content-end" appDnd>
+            <div class="mr-3">
+              <span> 
+                <img src="assets/images/download.png" alt="download" class="img-fluid mr-2">
+                <a (click)="downloadExcel('assets/images/Master_data.xlsx')"> Download</a></span>
+            </div>
+            <div>
+              <input type="file" accept=".xlsx" #fileDropRef id="fileDropRef" class="fileupload" multiple
+                (change)="uploadExcel($event.target.files)" />
+              <span> <img src="assets/images/upload.png" alt="upload" class="img-fluid mr-2 w-30"> Excel upload</span>
+            </div>
           </div>
         </div>
         <div class="row display-flex m-b-20">
           <div class="m-b-10 m-r-10" *ngFor="let category of selectedCategory">
-            <mat-card class="p-10"
-              >{{ category.materialGroup }}
+            <mat-card class="p-10">{{ category.materialGroup }}
               <button mat-button matSuffix mat-icon-button>
-                <mat-icon
-                  class="font-size18"
-                  (click)="clearSelectedCategory(category)"
-                  >clear</mat-icon
-                >
+                <mat-icon class="font-size18" (click)="clearSelectedCategory(category)">clear</mat-icon>
               </button>
             </mat-card>
           </div>
         </div>
         <div class="col-sm-12">
           <mat-form-field class="border-select center-element">
-            <mat-select
-              [formControl]="categories"
-              [(ngModel)]="selectedCategory"
-              multiple
-              floatlLabel="never"
-            >
+            <mat-select [formControl]="categories" [(ngModel)]="selectedCategory" multiple floatlLabel="never">
               <div class="display-flex">
-                <input
-                  class="p-l-10 p-b-5"
-                  matInput
-                  type="search"
-                  placeholder="Search Category Name"
-                  [(ngModel)]="searchText"
-                />
+                <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search Category Name"
+                  [(ngModel)]="searchText" />
                 <button mat-button matSuffix mat-icon-button>
                   <mat-icon>search</mat-icon>
                 </button>
               </div>
-              <mat-select-trigger
-                ><mat-label>Choose an option</mat-label></mat-select-trigger
-              >
-              <mat-option
-                *ngFor="
+              <mat-select-trigger>
+                <mat-label>Choose an option</mat-label>
+              </mat-select-trigger>
+              <mat-option *ngFor="
                   let category of fullCategoryList | SearchPipe: searchText
-                "
-                [value]="category"
-                >{{ category.materialGroup }}
+                " [value]="category">{{ category.materialGroup }}
               </mat-option>
             </mat-select>
           </mat-form-field>
         </div>
         <div class="col-sm-12 text-right m-t-40">
-          <button
-            *ngIf="getSelectedCategoriesLength()"
-            mat-raised-button
-            class="main-background-color main-button color-white"
-            (click)="finalisedCategory()"
-          >
+          <button *ngIf="getSelectedCategoriesLength()" mat-raised-button
+            class="main-background-color main-button color-white" (click)="finalisedCategory()">
             Next
           </button>
         </div>
@@ -76,22 +62,14 @@
       <div class="row p-t-10 p-b-10">
         <div class="col-sm-8"></div>
         <div class="col-sm-4">
-          <button
-            mat-raised-button
-            class="main-background-color main-button color-white pull-right"
-            (click)="saveCategory()"
-            [disabled]="!isAllFormsValid"
-          >
+          <button mat-raised-button class="main-background-color main-button color-white pull-right"
+            (click)="saveCategory()" [disabled]="!isAllFormsValid">
             SAVE
           </button>
         </div>
       </div>
       <div *ngFor="let data of categoryData">
-        <app-bom-preview
-          #preview
-          [selectedCategory]="data"
-          (inputEntered)="checkValidations($event)"
-        ></app-bom-preview>
+        <app-bom-preview #preview [selectedCategory]="data" (inputEntered)="checkValidations($event)"></app-bom-preview>
       </div>
     </div>
   </div>
